--- a/src/Wallabag/CoreBundle/Resources/translations/messages.ja.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.ja.yml
@@ -17,7 +17,7 @@ security:
 menu:
     left:
         unread: '未読'
-        starred: '星印付き'
+        starred: 'お気に入り'
         archive: 'アーカイブ済み'
         all_articles: '全ての記事'
         config: '設定'
@@ -71,7 +71,7 @@ config:
             label: '読む速度 (1分あたりの単語数)'
             help_message: 'オンラインツールを使用して読む速度を調べることもできます：'
         action_mark_as_read:
-            label: '記事を削除・星印付け・アーカイブした際の動作'
+            label: '記事を削除・お気に入り・アーカイブした際の動作'
             redirect_homepage: 'ホームへ戻る'
             redirect_current_page: 'そのページにとどまる'
         pocket_consumer_key_label: コンテンツをインポートするための Pocket のコンシューマキー
@@ -92,12 +92,12 @@ config:
         feed_links: 'フィードリンク'
         feed_link:
             unread: '未読'
-            starred: '星印付き'
+            starred: 'お気に入り'
             archive: 'アーカイブ済み'
             all: '全て'
         feed_limit: 'フィード内のアイテム数'
     form_user:
-        two_factor_description: "Enabling two factor authentication means you'll receive an email with a code OR need to use an OTP app (like Google Authenticator, Authy or FreeOTP) to get a one time code on every new untrusted connection. You can't choose both option."
+        two_factor_description: "2要素認証を有効にすると、認証コードが記載されたメールまたは、OTPアプリ(Google 認証システム、Authy、FreeOTPなど)を使用して、信頼のおけない新しい接続ごとに1回限りの認証コードを取得する必要があります。同時に両方のオプションを選択することはできません。"
         login_label: 'ユーザー名 (変更不可)'
         name_label: '名前'
         email_label: 'メールアドレス'
@@ -159,7 +159,7 @@ config:
                 title: '記事のタイトル'
                 url: '記事の URL'
                 isArchived: '記事がアーカイブされているかどうか'
-                isStarred: '記事に星印が付いているかどうか'
+                isStarred: '記事がお気に入りかどうか'
                 content: "記事の内容"
                 language: "記事の言語"
                 mimetype: "記事の MIME 形式"
@@ -191,7 +191,7 @@ entry:
     default_title: '記事のタイトル'
     page_titles:
         unread: '未読の記事'
-        starred: '星印月の記事'
+        starred: 'お気に入りの記事'
         archived: 'アーカイブ済みの記事'
         filtered: 'Filtered entries'
         filtered_tags: 'Filtered by tags:'
@@ -201,21 +201,21 @@ entry:
     list:
         number_on_the_page: '{0} There are no entries.|{1} There is one entry.|]1,Inf[ There are %count% entries.'
         reading_time: 'estimated reading time'
-        reading_time_minutes: 'estimated reading time: %readingTime% min'
-        reading_time_less_one_minute: 'estimated reading time: &lt; 1 min'
+        reading_time_minutes: 'estimated reading time: %readingTime% 分'
+        reading_time_less_one_minute: 'estimated reading time: &lt; 1 分'
         number_of_tags: '{1}and one other tag|]1,Inf[and %count% other tags'
-        reading_time_minutes_short: '%readingTime% min'
-        reading_time_less_one_minute_short: '&lt; 1 min'
-        original_article: 'original'
-        toogle_as_read: 'Toggle mark as read'
-        toogle_as_star: 'Toggle starred'
+        reading_time_minutes_short: '%readingTime% 分'
+        reading_time_less_one_minute_short: '&lt; 1 分'
+        original_article: '元URL'
+        toogle_as_read: '既読・未読の切替え'
+        toogle_as_star: 'お気に入りの切替え'
         delete: '削除'
         export_title: 'エクスポート'
     filters:
         title: 'フィルター'
         status_label: '状態'
         archived_label: 'アーカイブ済み'
-        starred_label: '星印付き'
+        starred_label: 'お気に入り'
         unread_label: '未読'
         preview_picture_label: 'プレビュー画像がある'
         preview_picture_help: 'プレビュー画像'
@@ -241,9 +241,9 @@ entry:
             back_to_homepage: '戻る'
             set_as_read: '既読としてマーク'
             set_as_unread: '未読としてマーク'
-            set_as_starred: 'Toggle starred'
+            set_as_starred: 'お気に入りの切替え'
             view_original_article: 'オリジナルの記事'
-            re_fetch_content: 'Re-fetch content'
+            re_fetch_content: 'コンテンツを再取得'
             delete: '削除'
             add_a_tag: 'タグを追加'
             share_content: '共有'
@@ -253,17 +253,17 @@ entry:
             export: 'エクスポート'
             print: '印刷'
             problem:
-                label: 'Problems?'
-                description: 'Does this article appear wrong?'
-        edit_title: 'Edit title'
-        original_article: 'original'
-        annotations_on_the_entry: '{0} No annotations|{1} One annotation|]1,Inf[ %count% annotations'
-        created_at: 'Creation date'
-        published_at: 'Publication date'
-        published_by: 'Published by'
-        provided_by: 'Provided by'
+                label: '問題がありますか？'
+                description: 'この記事に表示上の問題が発生していますか？'
+        edit_title: 'タイトルを編集'
+        original_article: '元URL'
+        annotations_on_the_entry: '{0} 注釈なし|{1} 1 件の注釈|]1,Inf[ %count% 件の注釈'
+        created_at: '作成日'
+        published_at: '公開日'
+        published_by: '公開者'
+        provided_by: '提供元'
     new:
-        page_title: 'Save new entry'
+        page_title: '新しい記事を保存'
         placeholder: 'https://website.com'
         form_new:
             url_label: Url
@@ -271,10 +271,10 @@ entry:
         placeholder: 'What are you looking for?'
     edit:
         page_title: 'Edit an entry'
-        title_label: 'Title'
+        title_label: 'タイトル'
         url_label: 'Url'
         origin_url_label: 'Origin url (from where you found that entry)'
-        save_label: 'Save'
+        save_label: '保存'
     public:
         shared_by_wallabag: "This article has been shared by %username% with <a href='%wallabag_instance%'>wallabag</a>"
     confirm:
@@ -282,7 +282,7 @@ entry:
         delete_tag: "Are you sure you want to remove that tag from that article?"
     metadata:
         reading_time: "Estimated reading time"
-        reading_time_minutes_short: "%readingTime% min"
+        reading_time_minutes_short: "%readingTime% 分"
         address: "Address"
         added_on: "Added on"
 
@@ -347,7 +347,7 @@ howto:
         action: 操作
         all_pages_title: Shortcuts available in all pages
         go_unread: 未読へ
-        go_starred: 星印付きへ
+        go_starred: お気に入りへ
         go_archive: アーカイブ済みへ
         go_all: 全ての記事へ
         go_tags: タグへ
@@ -391,7 +391,7 @@ quickstart:
         export: 'Configure export'
         import: 'Configure import'
     first_steps:
-        title: 'First steps'
+        title: '最初のステップ'
         description: "Now wallabag is well configured, it's time to archive the web. You can click on the top right sign + to add a link."
         new_article: 'Save your first article'
         unread_articles: 'And classify it!'
@@ -517,13 +517,13 @@ developer:
         page_title: 'API クライアントの管理 > 新しいクライアント'
         page_description: 'You are about to create a new client. Please fill the field below for the redirect URI of your application.'
         form:
-            name_label: 'Name of the client'
-            redirect_uris_label: 'Redirect URIs (optional)'
-            save_label: 'Create a new client'
+            name_label: 'クライアント名'
+            redirect_uris_label: 'リダイレクト URI (オプション)'
+            save_label: '新しいクライアントを作成'
         action_back: '戻る'
         copy_to_clipboard: コピー
     client_parameter:
-        page_title: 'API clients management > Client parameters'
+        page_title: 'API クライアントの管理 > Client parameters'
         page_description: 'Here are your client parameters.'
         field_name: 'クライアント名'
         field_id: 'クライアント ID'
@@ -624,8 +624,8 @@ flashes:
             entry_reloaded_failed: '記事の再読込を試みましたがコンテンツの呼び出しに失敗しました'
             entry_archived: '記事がアーカイブされました'
             entry_unarchived: '記事のアーカイブが解除されました'
-            entry_starred: '記事に星印が付けられました'
-            entry_unstarred: '記事の星印が解除されました'
+            entry_starred: '記事がお気に入りとして登録されました'
+            entry_unstarred: '記事がお気に入りから除外されました'
             entry_deleted: '記事が削除されました'
             no_random_entry: '条件に当てはまる記事が見つかりませんでした'
     tag:
