Added publication date on epub export

--- a/src/Wallabag/CoreBundle/Resources/translations/messages.fr.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.fr.yml
@@ -285,6 +285,7 @@ entry:
         reading_time_minutes_short: "%readingTime% min"
         address: "Adresse"
         added_on: "Ajouté le"
+        published_on: "Publié le"
 
 about:
     page_title: "À propos"
