--- a/src/Wallabag/CoreBundle/Resources/translations/messages.es.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.es.yml
@@ -285,6 +285,7 @@ entry:
         reading_time_minutes_short: "%readingTime% min"
         address: "Dirección"
         added_on: "Añadido el"
+        # published_on: "Published on"
 
 about:
     page_title: 'Acerca de'
