--- a/src/Wallabag/CoreBundle/Resources/translations/messages.ja.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.ja.yml
@@ -285,6 +285,7 @@ entry:
         reading_time_minutes_short: "%readingTime% 分"
         address: "アドレス"
         added_on: "追加日"
+        # published_on: "Published on"
 
 about:
     page_title: 'アプリについて'
