Added route to list entries with annotations

--- a/src/Wallabag/CoreBundle/Resources/translations/messages.es.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.es.yml
@@ -19,6 +19,7 @@ menu:
         starred: 'Favoritos'
         archive: 'Archivados'
         all_articles: 'Todos los artículos'
+        # with_annotations: 'With annotations'
         config: 'Configuración'
         tags: 'Etiquetas'
         internal_settings: 'Configuración interna'
@@ -217,6 +218,7 @@ entry:
         starred: 'Artículos favoritos'
         archived: 'Artículos archivados'
         filtered: 'Artículos filtrados'
+        # with_annotations: 'Entries with annotations'
         filtered_tags: 'Filtrado por etiquetas:'
         filtered_search: 'Filtrado por búsqueda:'
         untagged: 'Artículos sin etiquetas'
