--- a/src/Wallabag/CoreBundle/Resources/translations/messages.ru.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.ru.yml
@@ -19,6 +19,7 @@ menu:
         starred: 'Помеченные'
         archive: 'Архивные'
         all_articles: 'Все записи'
+        # with_annotations: 'With annotations'
         config: 'Настройки'
         tags: 'Теги'
         internal_settings: 'Внутренние настройки'
@@ -236,6 +237,7 @@ entry:
         starred: 'Помеченные записи'
         archived: 'Архивные записи'
         filtered: 'Отфильтрованные записи'
+        # with_annotations: 'Entries with annotations'
         filtered_tags: 'Отфильтрованные по тегу:'
         filtered_search: 'Отфильтрованные по поиску:'
         untagged: 'Записи без тегов'
