--- a/src/Wallabag/CoreBundle/Resources/translations/messages.zh.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.zh.yml
@@ -19,6 +19,7 @@ menu:
         starred: '收藏'
         archive: '存档'
         all_articles: '所有项目'
+        # with_annotations: 'With annotations'
         config: '配置'
         tags: '标签'
         internal_settings: '内部设置'
@@ -236,6 +237,7 @@ entry:
         starred: '收藏项目'
         archived: '存档项目'
         filtered: '筛选后项目'
+        # with_annotations: 'Entries with annotations'
         filtered_tags: '根据标签筛选：'
         filtered_search: '根据搜索筛选：'
         untagged: '无标签项目'
