--- a/src/Wallabag/CoreBundle/Resources/translations/messages.da.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.da.yml
@@ -41,6 +41,7 @@ menu:
         filter_entries: 'Filtrer artikler'
         # random_entry: Jump to a random entry from that list
         # export: 'Export'
+        # account: 'My account'
     search_form:
         input_label: 'Indtast søgning'
 
