--- a/src/Wallabag/CoreBundle/Resources/translations/messages.fa.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.fa.yml
@@ -41,6 +41,7 @@ menu:
         filter_entries: 'فیلترکردن مقاله‌ها'
         # random_entry: Jump to a random entry from that list
         export: 'برون‌بری'
+        # account: 'My account'
     search_form:
         input_label: 'جستجوی خود را این‌جا بنویسید:'
 
