--- a/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
+++ b/src/Wallabag/CoreBundle/Resources/translations/messages.en.yml
@@ -267,6 +267,7 @@ entry:
             last_updated: 'Last updated'
         ascending: 'Ascending'
         descending: 'Descending'
+        sort: 'Sort'
     view:
         left_menu:
             back_to_top: 'Back to top'
